add index html page

--- a/index.html
+++ b/index.html
@@ -123,85 +123,83 @@
         <!-- section services start -->
         <section class="section services">
           <div class="container">
-            <div class="services__inner">
-              <h2 class="section__title services__title">
-                Discover Our Services
-              </h2>
-              <p class="section__description services__description">
-                ExploreEra provides a one-stop solution for individuals seeking
-                well-planned journeys. These services include expert advice on
-                destination selection, flight and accommodation bookings, and
-                customized itineraries to individual preferences.
-              </p>
-              <div class="cards">
-                <a class="services__link" href="#">see all</a>
-                <!-- cards start  -->
-                <div class="cards-wrapper">
-                  <div class="card">
-                    <img
-                      class="card__img"
-                      src="./images/discover-1.png"
-                      alt="book flights" />
+            <h2 class="section__title services__title">
+              Discover Our Services
+            </h2>
+            <p class="section__description services__description">
+              ExploreEra provides a one-stop solution for individuals seeking
+              well-planned journeys. These services include expert advice on
+              destination selection, flight and accommodation bookings, and
+              customized itineraries to individual preferences.
+            </p>
+            <div class="cards">
+              <a class="services__link" href="#">see all</a>
+              <!-- cards start  -->
+              <div class="cards-wrapper">
+                <div class="card">
+                  <img
+                    class="card__img"
+                    src="./images/discover-1.png"
+                    alt="book flights" />
 
-                    <div>
-                      <h3 class="card__title">Book Flight</h3>
-                      <p class="card__description">
-                        book memorable journey with our flight booking services!
-                        we're thrilled to present you flight options to suit
-                        your travel needs.
-                      </p>
-                    </div>
+                  <div>
+                    <h3 class="card__title">Book Flight</h3>
+                    <p class="card__description">
+                      book memorable journey with our flight booking services!
+                      we're thrilled to present you flight options to suit your
+                      travel needs.
+                    </p>
                   </div>
-                  <!-- 2 -->
-                  <div class="card">
-                    <img
-                      class="card__img"
-                      src="./images/discover-1.png"
-                      alt="book flights" />
-
-                    <div>
-                      <h3 class="card__title">Book Flight</h3>
-                      <p class="card__description">
-                        book memorable journey with our flight booking services!
-                        we're thrilled to present you flight options to suit
-                        your travel needs.
-                      </p>
-                    </div>
-                  </div>
-                  <!-- 3 -->
-                  <div class="card">
-                    <img
-                      class="card__img"
-                      src="./images/discover-1.png"
-                      alt="book flights" />
-
-                    <div>
-                      <h3 class="card__title">Book Flight</h3>
-                      <p class="card__description">
-                        book memorable journey with our flight booking services!
-                        we're thrilled to present you flight options to suit
-                        your travel needs.
-                      </p>
-                    </div>
-                  </div>
-                  <!-- 4 -->
-                  <div class="card">
-                    <img
-                      class="card__img"
-                      src="./images/discover-1.png"
-                      alt="book flights" />
-
-                    <div>
-                      <h3 class="card__title">Book Flight</h3>
-                      <p class="card__description">
-                        book memorable journey with our flight booking services!
-                        we're thrilled to present you flight options to suit
-                        your travel needs.
-                      </p>
-                    </div>
-                  </div>
-                  <!-- end -->
                 </div>
+                <!-- 2 -->
+                <div class="card">
+                  <img
+                    class="card__img"
+                    src="./images/discover-1.png"
+                    alt="book flights" />
+
+                  <div>
+                    <h3 class="card__title">Book Flight</h3>
+                    <p class="card__description">
+                      book memorable journey with our flight booking services!
+                      we're thrilled to present you flight options to suit your
+                      travel needs.
+                    </p>
+                  </div>
+                </div>
+                <!-- 3 -->
+                <div class="card">
+                  <img
+                    class="card__img"
+                    src="./images/discover-1.png"
+                    alt="book flights" />
+
+                  <div>
+                    <h3 class="card__title">Book Flight</h3>
+                    <p class="card__description">
+                      book memorable journey with our flight booking services!
+                      we're thrilled to present you flight options to suit your
+                      travel needs.
+                    </p>
+                  </div>
+                </div>
+                <!-- 4 -->
+                <div class="card">
+                  <img
+                    class="card__img"
+                    src="./images/discover-1.png"
+                    alt="book flights" />
+
+                  <div>
+                    <h3 class="card__title">Book Flight</h3>
+                    <p class="card__description">
+                      book memorable journey with our flight booking services!
+                      we're thrilled to present you flight options to suit your
+                      travel needs.
+                    </p>
+                  </div>
+                </div>
+                <!-- end -->
               </div>
             </div>
           </div>
@@ -211,17 +209,15 @@
         <!-- section video start -->
         <section class="section video">
           <div class="container">
-            <div class="video__inner">
-              <h2 class="section__title">Watch Our Memorable Trips</h2>
-              <div class="section__iframe">
-                <iframe
-                  src="https://www.youtube.com/embed/oSexfR0Ubzw?si=exWHoehYzcQo9Ve1"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin"
-                  allowfullscreen></iframe>
-              </div>
+            <h2 class="section__title">Watch Our Memorable Trips</h2>
+            <div class="section__iframe">
+              <iframe
+                src="https://www.youtube.com/embed/oSexfR0Ubzw?si=exWHoehYzcQo9Ve1"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen></iframe>
             </div>
           </div>
         </section>
@@ -230,49 +226,169 @@
 
         <section class="section slick-carousel">
           <div class="container">
-            <div class="services__inner">
-              <h2 class="section__title services__title">
-                Popular Tour Offers
-              </h2>
-              <div class="slider">
-                <!-- 1 -->
-                <div class="slider_item card">
-                  <img class="" src="./images/carousel-1.png" alt="" />
-                  <div class="card__info">
-                    <h3 class="card__title">Barcelona, Spain</h3>
-                    <span class="card__description"> 2 adults, 7 days </span>
-                    <span class="card__description"> 2400$ </span>
-                  </div>
+            <h2 class="section__title services__title">Popular Tour Offers</h2>
+            <div class="slider">
+              <!-- 1 -->
+              <div class="slider_item card">
+                <img class="" src="./images/carousel-1.png" alt="" />
+                <div class="card__info">
+                  <h3 class="card__title">Barcelona, Spain</h3>
+                  <span class="card__description"> 2 adults, 7 days </span>
+                  <span class="card__description"> 2400$ </span>
                 </div>
-                <!-- 2 -->
-                <div class="slider_item card">
-                  <img class="" src="./images/carousel-1.png" alt="" />
-                  <div class="card__info">
-                    <h3 class="card__title">Barcelona, Spain</h3>
-                    <span class="card__description"> 2 adults, 7 days </span>
-                    <span class="card__description"> 2400$ </span>
-                  </div>
-                </div>
-                <!-- 3 -->
-                <div class="slider_item card">
-                  <img class="" src="./images/carousel-1.png" alt="" />
-                  <div class="card__info">
-                    <h3 class="card__title">Barcelona, Spain</h3>
-                    <span class="card__description"> 2 adults, 7 days </span>
-                    <span class="card__description"> 2400$ </span>
-                  </div>
-                </div>
-                <!--  -->
-                <div class="slider_item card">
-                  <img class="" src="./images/carousel-1.png" alt="" />
-                  <div class="card__info">
-                    <h3 class="card__title">Barcelona, Spain</h3>
-                    <span class="card__description"> 2 adults, 7 days </span>
-                    <span class="card__description"> 2400$ </span>
-                  </div>
-                </div>
-                <!-- end -->
               </div>
+              <!-- 2 -->
+              <div class="slider_item card">
+                <img class="" src="./images/carousel-1.png" alt="" />
+                <div class="card__info">
+                  <h3 class="card__title">Barcelona, Spain</h3>
+                  <span class="card__description"> 2 adults, 7 days </span>
+                  <span class="card__description"> 2400$ </span>
+                </div>
+              </div>
+              <!-- 3 -->
+              <div class="slider_item card">
+                <img class="" src="./images/carousel-1.png" alt="" />
+                <div class="card__info">
+                  <h3 class="card__title">Barcelona, Spain</h3>
+                  <span class="card__description"> 2 adults, 7 days </span>
+                  <span class="card__description"> 2400$ </span>
+                </div>
+              </div>
+              <!--  4-->
+              <div class="slider_item card">
+                <img class="" src="./images/carousel-1.png" alt="" />
+                <div class="card__info">
+                  <h3 class="card__title">Barcelona, Spain</h3>
+                  <span class="card__description"> 2 adults, 7 days </span>
+                  <span class="card__description"> 2400$ </span>
+                </div>
+              </div>
+              <div class="slider_item card">
+                <img class="" src="./images/carousel-1.png" alt="" />
+                <div class="card__info">
+                  <h3 class="card__title">Barcelona, Spain</h3>
+                  <span class="card__description"> 2 adults, 7 days </span>
+                  <span class="card__description"> 2400$ </span>
+                </div>
+              </div>
+              <!-- end -->
+            </div>
+          </div>
+        </section>
+        <section class="section blog">
+          <div class="container">
+            <h2 class="section__title blog__title">Blogs</h2>
+            <div class="cards-wrapper">
+              <div class="card">
+                <img
+                  class="card__img"
+                  src="./images/blog-1.png"
+                  alt="book flights" />
+                <div class="card__title">Interesting Tibetan Traditions</div>
+              </div>
+              <!-- 2 -->
+              <div class="card">
+                <img
+                  class="card__img"
+                  src="./images/blog-2.png"
+                  alt="book flights" />
+                <div class="card__title">Interesting Tibetan Traditions</div>
+              </div>
+              <div class="card">
+                <img
+                  class="card__img"
+                  src="./images/blog-3.png"
+                  alt="book flights" />
+                <div class="card__title">Interesting Tibetan Traditions</div>
+              </div>
+              <div class="card">
+                <img
+                  class="card__img"
+                  src="./images/blog-1.png"
+                  alt="book flights" />
+                <div class="card__title">Interesting Tibetan Traditions</div>
+              </div>
+              <!-- 2 -->
+              <div class="card">
+                <img
+                  class="card__img"
+                  src="./images/blog-2.png"
+                  alt="book flights" />
+                <div class="card__title">Interesting Tibetan Traditions</div>
+              </div>
+              <div class="card">
+                <img
+                  class="card__img"
+                  src="./images/blog-3.png"
+                  alt="book flights" />
+                <div class="card__title">Interesting Tibetan Traditions</div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        
+        <section class="section booking">
+          <div class="container">
+            <h1 class="section__title">Ready To Book A Trip?</h1>
+            <div class="section__inner">
+              <form class="booking__form" action="#">
+                <div class="booking__dropdown">
+                  <label for="cars" class="hidden"
+                    >Your starting location</label
+                  >
+                  <select class="dropdown btn" name="cars" id="cars">
+                    <option value="location">Your starting location</option>
+                    <option value="italy">Rome, Italy</option>
+                    <option value="Egypt">Luxor City, Egypt</option>
+                    <option value="france">Barcelona, Spain</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                  </select>
+                </div>
+                <div class="booking__dropdown">
+                  <label for="cars" class="hidden"
+                    >Your starting location</label
+                  >
+                  <select class="dropdown btn" name="cars" id="cars">
+                    <option value="location">Your starting location</option>
+                    <option value="italy">Rome, Italy</option>
+                    <option value="Egypt">Luxor City, Egypt</option>
+                    <option value="france">Barcelona, Spain</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                  </select>
+                </div>
+                <div class="booking__dropdown">
+                  <label for="cars" class="hidden">Choose a tour offer</label>
+                  <select class="dropdown btn" name="cars" id="cars">
+                    <option value="location">Choose date</option>
+                    <option value="italy">Rome, Italy</option>
+                    <option value="Egypt">Luxor City, Egypt</option>
+                    <option value="france">Barcelona, Spain</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                  </select>
+                </div>
+                <div class="booking__dropdown">
+                  <label for="cars" class="hidden">Persons</label>
+                  <select class="dropdown btn" name="cars" id="cars">
+                    <option value="location">Your starting location</option>
+                    <option value="italy">Rome, Italy</option>
+                    <option value="Egypt">Luxor City, Egypt</option>
+                    <option value="france">Barcelona, Spain</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                    <option value="france">Paris, France</option>
+                  </select>
+                </div>
+
+                <input class="btn btn-primary" type="submit" value="book now" />
+              </form>
             </div>
           </div>
         </section>
