--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>unilab-2024</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css"/>
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,7 +53,7 @@
             <!-- sign in popup -->
             <ul class="hidden" id="sign-in">
               <li class="signin__item">
-                <a class="signin__link" href="#">sign in</a>
+                <a class="signin__link" href="./pages/sign-in.html">sign in</a>
               </li>
               <li class="signin__item">
                 <a class="signin__link" href="#">sign up</a>
@@ -68,7 +68,7 @@
               <div class="mobile-menu__navigation hidden">
                 <ul class="mobile-menu__sign-in">
                   <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#">sign in</a>
+                    <a class="mobile-menu__link" href="./pages/sign-in.html">sign in</a>
                   </li>
                   <li class="mobile-menu__item">
                     <a class="mobile-menu__link" href="#">sign up</a>
