--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>unilab-2024</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,8 +19,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   </head>
 
-  <body>
-    <header class="header" id="header">
+  <body class="registration_page">
+    <header class="header active-header " id="header">
       <div class="container">
         <div class="header__inner">
           <div class="logo"><a href="index.html">ExploreEra</a></div>
@@ -108,10 +108,10 @@
       </div>
     </header>
     <div class="wrapper">
-     
       <main class="main">
-     </main>
-        <footer class="footer">
+        <section class="sign-in_form"></section>
+      </main>
+      <footer class="footer">
         <div class="container">
           <div class="footer__inner">
             <div class="footer__block-1">
@@ -223,10 +223,7 @@
       </footer>
     </div>
 
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./js/slick.min.js"></script>
 
-    <script src="js/script.js"></script>
+    <script src="../js/header-menu.js"></script>
   </body>
 </html>
