--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -3,6 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta name="description" content="Visit mountains in Italy" />
+    <meta name="keywords" content="HTML, CSS, Scss, javaScript" />
+    <meta name="author" content="Nino Sopoian" />
+
+    <!-- fb meta tags -->
+    <meta
+      property="og:url"
+      content="https://github.com/Nino5982/unilab-2024"
+    />
+    <meta property="og:type" content="Website" />
+    <meta property="og:title" content="project for Unilab" />
+    <meta
+      property="og:description"
+      content="It's my first Scss project"
+    />
+    <meta
+      property="og:image"
+            content="https://github.com/Nino5982/georgia-tours/blob/main/images/intro-bg-1.jpg"
+
+    />
     <title>unilab-2024</title>
     <link rel="stylesheet" href="../css/main.css" />
 
