--- a/index.html
+++ b/index.html
@@ -135,69 +135,8 @@
             <div class="cards">
               <a class="services__link" href="#">see all</a>
               <!-- cards start  -->
-              <div class="cards-wrapper">
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
-
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
-                  </div>
-                </div>
-                <!-- 2 -->
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
-
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
-                  </div>
-                </div>
-                <!-- 3 -->
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
-
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
-                  </div>
-                </div>
-                <!-- 4 -->
-                <div class="card">
-                  <img
-                    class="card__img"
-                    src="./images/discover-1.png"
-                    alt="book flights" />
-
-                  <div>
-                    <h3 class="card__title">Book Flight</h3>
-                    <p class="card__description">
-                      book memorable journey with our flight booking services!
-                      we're thrilled to present you flight options to suit your
-                      travel needs.
-                    </p>
-                  </div>
+              <div class="cards-wrapper services-cards" id="services-cards">
+               
                 </div>
                 <!-- end -->
               </div>
@@ -505,9 +444,11 @@
       </footer>
     </div>
 
+    <script src="./js/data.js"></script>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
+
 
     <script src="js/script.js"></script>
   </body>
